# live-reloading-inventory-management-system

./: .gitignore  README.md  main.py  pyproject.toml  ws_test.html
backend/: .dockerignore  Dockerfile  docker-compose.yml  docker-entrypoint.sh  requirements.txt
backend/api/: apps.py  consumers.py  middleware.py  models.py  permissions.py  routing.py  serializers.py  signals.py  urls.py  views.py
backend/api/management/commands/: populate_products.py
backend/api/migrations/: 0001_initial.py
backend/backend/: asgi.py  settings.py  urls.py
frontend/: .dockerignore  Dockerfile.dev  index.html  package-lock.json  package.json  tailwind.config.js
frontend/src/: App.jsx  api.js  index.css
frontend/src/components/: LoadingIndicator.jsx  Navbar.jsx  ProtectedRoute.jsx  animation.jsx
frontend/src/pages/: AddProduct.jsx  DeleteProduct.jsx  Home.jsx  Login.jsx  Logout.jsx  MyProducts.jsx  NotFound.jsx  Register.jsx  UpdateProduct.jsx
